@@ -11,9 +11,11 @@ import com.example.crafteria_server.domain.user.entity.Author;
 import com.example.crafteria_server.domain.user.entity.User;
 import com.example.crafteria_server.domain.user.repository.AuthorRepository;
 import com.example.crafteria_server.domain.user.repository.UserRepository;
+import com.example.crafteria_server.domain.user.service.UserService;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
@@ -21,6 +23,9 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.server.ResponseStatusException;
 
 import java.util.List;
+import java.util.Optional;
+import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 @Slf4j(topic = "ModelService")
@@ -32,40 +37,49 @@ public class ModelService {
     private final AuthorRepository authorRepository;
     private final ModelPurchaseRepository modelPurchaseRepository;
     private final FileService fileService;
+    private final UserService userService;
 
-    public List<UserModelDto.ModelResponse> getPopularList(int page) {
+    public List<UserModelDto.ModelResponse> getPopularList(int page, Optional<Long> userId) {
         Pageable pageable = PageRequest.of(page, 10);
-        return modelRepository.findAllOrderByViewCountDesc(pageable).stream()
-                .map(UserModelDto.ModelResponse::from)
-                .toList();
+        List<Model> models = modelRepository.findAllByIsDeletedFalseOrderByViewCountDesc(pageable).getContent();
+
+        return models.stream()
+                .map(model -> {
+                    boolean purchaseAvailability = userId
+                            .map(uId -> !uId.equals(model.getAuthor().getId()) && !checkIfModelPurchased(uId, model.getId()))
+                            .orElse(true);
+                    return UserModelDto.ModelResponse.from(model, purchaseAvailability, model.isDownloadable());
+                })
+                .collect(Collectors.toList());
     }
 
-    public UserModelDto.ModelResponse getModelDetail(Long modelId) {
-        Model model = modelRepository.findById(modelId).orElseThrow(() ->
+    public UserModelDto.ModelResponse getModelDetail(Long modelId, Optional<Long> userId) {
+        Model model = modelRepository.findByIdAndIsDeletedFalse(modelId).orElseThrow(() ->
                 new ResponseStatusException(HttpStatus.NOT_FOUND, "도면을 찾을 수 없습니다."));
+
+        boolean purchaseAvailability = userId
+                .map(uId -> !uId.equals(model.getAuthor().getId()) && !checkIfModelPurchased(uId, modelId))
+                .orElse(true);
+
         model.setViewCount(model.getViewCount() + 1);
-        return UserModelDto.ModelResponse.from(modelRepository.save(model));
+        modelRepository.save(model);
+
+        return UserModelDto.ModelResponse.from(model, purchaseAvailability, model.isDownloadable());
     }
 
     public UserModelDto.ModelResponse uploadModel(Long userId, UserModelDto.ModelUploadRequest request) {
         User user = userRepository.findById(userId).orElseThrow(() ->
                 new ResponseStatusException(HttpStatus.NOT_FOUND, "유저를 찾을 수 없습니다."));
-        log.info("userid: {}", user.getId());
 
-        // Author 엔티티를 가져오거나 없으면 생성
-        Author author = authorRepository.findById(user.getId()).orElseGet(() -> {
-            Author newAuthor = Author.builder()
-                    .user(user)
-                    .id(user.getId())
-                    .realname(user.getRealname())  // User의 realname을 Author의 realname에 복사
-                    .rating(5)
-                    .modelCount(0)
-                    .viewCount(0)
-                    .build();
-            return newAuthor;
-        });
+        Author author = authorRepository.findById(user.getId()).orElseGet(() -> Author.builder()
+                .user(user)
+                .id(user.getId())
+                .realname(user.getRealname())
+                .rating(5)
+                .modelCount(0)
+                .viewCount(0)
+                .build());
 
-        // Author가 새로 생성되었거나 기존 Author의 realname이 없을 경우 업데이트
         if (author.getRealname() == null) {
             author.setRealname(user.getRealname());
         }
@@ -73,7 +87,6 @@ public class ModelService {
         authorRepository.save(author);
 
         File modelFile = fileService.saveModel(request.getModelFile());
-
         Model newModel = Model.builder()
                 .author(author)
                 .name(request.getName())
@@ -85,17 +98,44 @@ public class ModelService {
                 .widthSize(request.getWidthSize())
                 .lengthSize(request.getLengthSize())
                 .heightSize(request.getHeightSize())
+                .category(request.getCategory())
                 .modelFile(modelFile)
+                .isDownloadable(request.isDownloadable())
                 .build();
 
-        return UserModelDto.ModelResponse.from(modelRepository.save(newModel));
+        modelRepository.save(newModel);
+
+        // 업로드 수 증가 및 판매자 레벨 갱신
+        user.setTotalUploadCount(user.getTotalUploadCount() + 1);
+        userService.updateUserLevel(user);
+        userRepository.save(user);
+
+        log.info("[도면 업로드 처리] 유저ID: {}, 업로드 후 총 업로드 수: {}", userId, user.getTotalUploadCount());
+
+        log.info("[도면 업로드] userId={}, modelName='{}', price={}, downloadable={}, category={}, fileName={}",
+                userId,
+                request.getName(),
+                request.getPrice(),
+                request.isDownloadable(),
+                request.getCategory(),
+                request.getModelFile().getOriginalFilename()
+        );
+
+        return UserModelDto.ModelResponse.from(newModel, false, newModel.isDownloadable());
     }
 
     public List<UserModelDto.ModelResponse> getMyDownloadedModelList(int page, Long userId) {
         Pageable pageable = PageRequest.of(page, 10);
-        return modelPurchaseRepository.findAllByUserIdOrderByCreateDateDesc(userId, pageable).stream()
-                .map(UserModelDto.ModelResponse::from)
-                .toList();
+        Page<ModelPurchase> purchases = modelPurchaseRepository
+                .findAllByUserIdAndVerifiedTrueOrderByCreateDateDesc(userId, pageable);
+
+        return purchases.stream()
+                .map(purchase -> {
+                    Model model = purchase.getModel();
+                    boolean downloadable = model.isDownloadable();
+                    return UserModelDto.ModelResponse.from(model, false, downloadable);
+                })
+                .collect(Collectors.toList());
     }
 
     public UserModelDto.ModelResponse purchaseModel(Long userId, Long modelId) {
@@ -103,22 +143,106 @@ public class ModelService {
                 new ResponseStatusException(HttpStatus.NOT_FOUND, "유저를 찾을 수 없습니다."));
         Model model = modelRepository.findById(modelId).orElseThrow(() ->
                 new ResponseStatusException(HttpStatus.NOT_FOUND, "모델을 찾을 수 없습니다."));
-        modelPurchaseRepository.findByUserIdAndModelId(userId, modelId).ifPresent(modelPurchase -> {
+
+        if (model.getAuthor().getUser().getId().equals(userId)) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "자신이 판매중인 도면은 구매할 수 없습니다.");
+        }
+
+        modelPurchaseRepository.findByUserIdAndModelIdAndVerifiedTrue(userId, modelId).ifPresent(p -> {
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "이미 구매한 모델입니다.");
         });
-        modelPurchaseRepository.save(ModelPurchase.builder()
+
+        ModelPurchase purchase = ModelPurchase.builder()
                 .user(user)
                 .model(model)
-                .build());
+                .paymentId(model.getPrice() > 0 ? UUID.randomUUID().toString() : null)
+                .verified(model.getPrice() == 0)
+                .build();
+
+        ModelPurchase savedPurchase = modelPurchaseRepository.save(purchase);
+
         model.setDownloadCount(model.getDownloadCount() + 1);
-        return UserModelDto.ModelResponse.from(model);
+        modelRepository.save(model);
+
+
+
+        // 구매자 유저 레벨 업데이트
+        user.setTotalPurchaseCount(user.getTotalPurchaseCount() + 1);
+        user.setTotalPurchaseAmount(user.getTotalPurchaseAmount() + model.getPrice());
+        userService.updateUserLevel(user);
+        userRepository.save(user);
+
+        // 판매자 레벨 업데이트
+        User seller = model.getAuthor().getUser();
+        seller.setTotalSalesCount(seller.getTotalSalesCount() + 1);
+        seller.setTotalSalesAmount(seller.getTotalSalesAmount() + model.getPrice());
+        userService.updateUserLevel(seller);
+        userRepository.save(seller);
+
+        log.info("[도면 구매 처리] 구매자: {}, 판매자: {}, 도면ID: {}, 가격: {}, 다운로드 가능: {}",
+                user.getUsername(), seller.getUsername(), modelId, model.getPrice(), model.isDownloadable());
+
+        return UserModelDto.ModelResponse.from(savedPurchase, model.isDownloadable());
     }
 
     public List<UserModelDto.ModelResponse> getMyUploadedModelList(int page, Long userId) {
         Pageable pageable = PageRequest.of(page, 10);
-        return modelRepository.findAllByAuthorIdOrderByCreateDateDesc(userId, pageable).stream()
-                .map(UserModelDto.ModelResponse::from)
-                .toList();
+        List<Model> models = modelRepository.findAllByAuthorIdAndIsDeletedFalseOrderByCreateDateDesc(userId, pageable).getContent();
+
+        return models.stream()
+                .map(model -> UserModelDto.ModelResponse.from(model, false, model.isDownloadable()))
+                .collect(Collectors.toList());
+    }
+
+    private boolean checkIfModelPurchased(Long userId, Long modelId) {
+        return modelPurchaseRepository.findByUserIdAndModelIdAndVerifiedTrue(userId, modelId).isPresent();
+    }
+
+    public UserModelDto.ModelResponse updateModel(Long modelId, Long userId, UserModelDto.ModelUploadRequest request) {
+        Model model = modelRepository.findById(modelId).orElseThrow(() ->
+                new ResponseStatusException(HttpStatus.NOT_FOUND, "도면을 찾을 수 없습니다."));
+
+        if (!model.getAuthor().getId().equals(userId)) {
+            throw new ResponseStatusException(HttpStatus.FORBIDDEN, "이 도면을 수정할 권한이 없습니다.");
+        }
+
+        log.info("[도면 수정 - 수정 전] modelId={}, name={}, price={}, category={}, downloadable={}",
+                model.getId(), model.getName(), model.getPrice(), model.getCategory(), model.isDownloadable());
+
+        model.setName(request.getName());
+        model.setDescription(request.getDescription());
+        model.setPrice(request.getPrice());
+        model.setWidthSize(request.getWidthSize());
+        model.setLengthSize(request.getLengthSize());
+        model.setHeightSize(request.getHeightSize());
+        model.setCategory(request.getCategory());
+        model.setDownloadable(request.isDownloadable());
+
+        if (request.getModelFile() != null) {
+            File modelFile = fileService.saveModel(request.getModelFile());
+            model.setModelFile(modelFile);
+        }
+
+        log.info("[도면 수정 - 수정 후] modelId={}, name={}, price={}, category={}, downloadable={}",
+                model.getId(), model.getName(), model.getPrice(), model.getCategory(), model.isDownloadable());
+
+        modelRepository.save(model);
+        return UserModelDto.ModelResponse.from(model, false, model.isDownloadable());
+    }
+
+    public void deleteModel(Long modelId, Long userId) {
+        Model model = modelRepository.findById(modelId)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "도면을 찾을 수 없습니다."));
+
+        if (!model.getAuthor().getId().equals(userId)) {
+            throw new ResponseStatusException(HttpStatus.FORBIDDEN, "이 도면을 삭제할 권한이 없습니다.");
+        }
+
+        log.info("[도면 삭제] modelId={}, modelName={}, deletedByUserId={}",
+                model.getId(), model.getName(), userId);
+
+        model.setDeleted(true);
+        modelRepository.save(model);
     }
 }
 
